--- a/ingress-resource.yaml
+++ b/ingress-resource.yaml
@@ -5,9 +5,13 @@ metadata:
   annotations:
     alb.ingress.kubernetes.io/scheme: internet-facing
     alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS": 443}]'
-    alb.ingress.kubernetes.io/subnets: 'subnet-xxxxxxxx,subnet-xxxxxxxx'
-    alb.ingress.kubernetes.io/security-groups: 'sg-xxxxxxxx,sg-xxxxxxxx'
-    alb.ingress.kubernetes.io/certificate-arn: <ACM_CERT_ARN>
+    # modify below with your subnets
+    alb.ingress.kubernetes.io/subnets: 'subnet-c21954bb, subnet-1bb7d850, subnet-ce481794'
+    # security groups on ALB - make sure:
+    # 1. HTTP and HTTPS ingress is open
+    # 2. ALB has tne nodegroup sg as well so it can health check the nodes
+    alb.ingress.kubernetes.io/security-groups: sg-2f25645f,sg-54391324
+    #alb.ingress.kubernetes.io/certificate-arn: <ACM_CERT_ARN>
   labels:
     app: webapp-service
 spec:
